--- a/2.hardhat/package.json
+++ b/2.hardhat/package.json
@@ -11,8 +11,13 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "hardhat": "^2.9.5"
+    "hardhat": "^2.9.5",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
