--- a/2.hardhat/package.json
+++ b/2.hardhat/package.json
@@ -19,5 +19,8 @@
     "hardhat": "^2.9.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0"
   }
 }
