--- a/2.hardhat/tsconfig.json
+++ b/2.hardhat/tsconfig.json
@@ -9,5 +9,5 @@
     "resolveJsonModule": true
   },
   "include": ["./scripts", "./test"],
-  "files": ["./hardhat.config.ts"]
+  "files": ["hardhat.config.js"]
 }
